--- a/frontend/src/styles/components/ScheduleRoutePage.css
+++ b/frontend/src/styles/components/ScheduleRoutePage.css
@@ -10,7 +10,7 @@
 .schedule-date-container {
     background-color: var(--background);
     width: 24rem;
-    height: 7rem;
+    height: 5rem;
     border-top-right-radius: .5rem;
     border-top-left-radius: .5rem;
     display: flex;
@@ -27,6 +27,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: -2rem;
+    z-index: 10;
 }
 
 .schedule-date-background {
