--- a/frontend/src/styles/components/GoogleMapInfoWindow.css
+++ b/frontend/src/styles/components/GoogleMapInfoWindow.css
@@ -1,8 +1,8 @@
 .map-info-window-container {
     width: 24vw;
-    margin-top: .2rem;
+    margin-top: .5rem;
     margin-left: .2rem;
-    margin-right: .9rem;
+    margin-right: 1rem;
     margin-bottom: .9rem;
 }
 
@@ -22,6 +22,12 @@
 
 .map-info-window-ticket > h2 {
     font-size: 30px;
+    padding-left: 4rem;
+}
+
+.map-info-window-ticket > h3 {
+    font-size: 24px;
+    color: var(--ticket);
     padding-left: 4rem;
 }
 
@@ -70,21 +76,37 @@
     box-shadow: 3px 3px 5px var(--black);
 }
 
+.map-info-window-error {
+    border: 2px solid var(--ticket);
+}
+
+.map-info-inital {
+    display: none;
+}
+
 .map-info-window-body > input, .map-info-window-body > select {
     height: 2.25rem;
     color: var(--white);
     border-radius: .5rem;
     font-size: 16px;
     font-weight: 600;
-    border: 0;
     outline: 0;
     padding-left: .5rem;
     cursor: pointer;
     box-shadow: 3px 3px 5px var(--black);
+    background-color: var(--background);
 }
 
 .gm-style .gm-style-iw-c {
     background-color: var(--background);
+}
+.gm-style-iw-c > button > span {
+    width: 18px !important;
+    height: 21px !important;
+    margin-left: 4px !important;
+}
+.gm-ui-hover-effect > span {
+    background-color: var(--white);
 }
 
 .map-info-window-button {
@@ -99,9 +121,13 @@
     border-radius: .5rem;
     border: 0;
     background-color: var(--primary-light);
-    margin-top: 1rem;
-    margin-bottom: .5rem;
+    margin-top: .5rem;
     box-shadow: 3px 3px 5px var(--black);
+}
+
+.map-info-window-button > button:hover {
+    background-color: var(--primary-light-accent);
+    cursor: pointer;
 }
 
 .map-info-window-info-container-background {
@@ -114,5 +140,4 @@
 .map-info-window-info-container-second-background {
     background-color: var(--gray);
     border-radius: .5rem;
-
 }
