--- a/frontend/src/styles/components/NavigationBar.css
+++ b/frontend/src/styles/components/NavigationBar.css
@@ -132,3 +132,51 @@
     width: 100%;
     margin: .5rem 0px;
 }
+
+
+@media (min-width: 1025px)
+        and (max-width: 1200px) {
+        .navi-bar {
+            gap: 35rem
+        }
+
+        .navi-user-arrow {
+            margin-right: 0;
+        }
+    }
+
+@media (min-width: 769px)
+        and (max-width: 1024px) {
+        .navi-bar {
+            gap: 22rem;
+        }
+        .navi-user-arrow {
+            margin-right: 0;
+        }
+    }
+
+@media (min-width: 481px)
+    and (max-width: 768px) {
+        .navi-bar {
+            gap: 18rem;
+        }
+        .navi-user-arrow {
+            margin-right: 0;
+        }
+    }
+
+@media (max-width: 480px) {
+    .navi-bar {
+        gap: 30rem;
+        width: 100%;
+    }
+    .navi-home {
+        margin-right: 2rem;
+    }
+    .navi-user-arrow {
+        margin-right: 0;
+    }
+    .navi-button {
+        margin-left: 7rem;
+    }
+}
