--- a/frontend/src/styles/components/MainPage.css
+++ b/frontend/src/styles/components/MainPage.css
@@ -67,3 +67,63 @@
     box-shadow: 0px 0px 15px var(--primary-light);
     background-color: var(--primary-light);
 }
+
+@media (min-width: 1025px)
+        and (max-width: 1415px) {
+            .main-page-body-container {
+                gap: 8rem;
+            }
+        }
+@media (min-width: 936px)
+        and (max-width: 1024px) {
+            .main-page-body-container {
+                gap: 5rem;
+            }
+        }
+
+@media (min-width: 769px)
+        and (max-width: 936px) {
+            .main-page-body-container {
+                gap: 2rem;
+            }
+
+            .main-page-header-text {
+                width: 45rem;
+                text-align: center;
+            }
+        }
+@media (min-width: 481px)
+        and (max-width: 768px) {
+            .main-page-body-container {
+                gap: 2rem;
+            }
+
+            .main-page-header-text {
+                width: 39rem;
+                text-align: center;
+            }
+
+            .main-page-body-options-container {
+                width: 11rem;
+            }
+        }
+
+@media (max-width: 480px) {
+    .main-page-header-container {
+        width: 60rem;
+    }
+
+    .main-page-body-container {
+        gap: 2rem;
+        width: 60rem;
+        height: 77.7rem;
+    }
+
+    .main-page-body_inner > h1 {
+        font-size: 50px;
+    }
+
+    .main-page-body-options_inner > p {
+        font-size: 30px;
+    }
+}
