--- a/frontend/src/styles/components/TicketInfoProduct.css
+++ b/frontend/src/styles/components/TicketInfoProduct.css
@@ -75,3 +75,32 @@
     position: absolute;
     margin-left: 2rem;
 }
+
+@media (min-width: 880px)
+        and (max-width: 1032px) {
+         .product-input_inner > input, .product-input_inner > select {
+            margin-left: 0;
+         }
+        }
+
+@media (min-width: 769px)
+        and (max-width: 879px) {
+         .product-input_inner > input, .product-input_inner > select {
+            margin-left: 0;
+         }
+
+         .ticket-info-product_inner {
+            padding-bottom: 17rem;
+         }
+        }
+
+@media (min-width: 481px)
+        and (max-width: 768px) {
+            .product-input_inner > input, .product-input_inner > select {
+                margin-left: 0;
+             }
+
+             .ticket-info-product_inner {
+                padding-bottom: 17rem;
+             }
+        }
