--- a/frontend/src/styles/globals/_variables.css
+++ b/frontend/src/styles/globals/_variables.css
@@ -11,7 +11,8 @@
     --primary-dark: #004AAD;
     --primary-light: #5CE1E6;
     --primary-light-accent: #12f7ff;
-    --ticket: 	#FFA5A5;
+    --ticket: #FFA5A5;
+    --ticket-red: #ec3232;;
     --white: #F6F6F6;
 }
 
